--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,9 @@
 Menu (<a href="{{ site.github.repository_url }}/edit/{{site.git_branch | escape}}/_includes/sidebar.html">Edit</a>):
 
+<p align="center">
+  <img src="assets/images/htpc-logo.png" alt="VSS Logo" style="width:400px"/>
+</p>
+
 <ul>
   <li><a href="{{ '/' | relative_url }}">Home</a></li>
-  <li><a href="{{ '/example-page' | relative_url }}">Example page</a></li>
 </ul>
