--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,4 +6,5 @@ Menu (<a href="{{ site.github.repository_url }}/edit/{{site.git_branch | escape}
 
 <ul>
   <li><a href="{{ '/' | relative_url }}">Home</a></li>
+   <li><a href="{{ '/faq' | relative_url }}">FAQ</a></li>
 </ul>
